robot_ws/log/build_2024-10-17_13-05-09/wheel_controller/stderr.log
  File "/home/dora/dora_ros2_ws/robot_ws/install/wheel_controller/lib/python3.10/site-packages/wheel_controller/wheel_controller.py", line 62
    self.get_logger().info(f"Sent: {b'\x11'}")
                                             ^
SyntaxError: f-string expression part cannot include a backslash

